--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       gtag('config', 'G-2H28W12C3V');
     </script>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>☕</text></svg>"
@@ -18,7 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee</title>
   </head>
-  <body>
+  <body class="min-h-screen bg-gray-50 text-gray-800 font-sans antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
